k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-manager-service
  namespace: task-manager

spec:
  selector:
    app: task-manager

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP
