k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-manager-ingress
  namespace: task-manager

spec:
  ingressClassName: traefik

  rules:
    - host: localhost

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: task-manager-service
                port:
                  number: 3000
